# LaboratorioINS378L

./: .gitignore  CMakeLists.txt  README.md
2ArraysInOrder/: ArraysInOrder2.cpp
Lab1/: main.cpp
Lab2/: CMakeLists.txt  main.cpp
Lab3/: CMakeLists.txt  main.cpp
Lab7/: hanoiTower.cpp
LabDoc/: ArraysInOrder2.cpp  CMakeLists.txt  InmediatamenteSuperior.cpp  SeparacionNumeros.cpp  digitos.cpp  entero.cpp  ocurrencias.cpp  union.cpp  valorSup.cpp
Reina/: CMakeLists.txt  Reinas.cpp
SeparacionNumeros/: SeparacionNumeros.cpp
Teoria1/: CMakeLists.txt  main.cpp
Teoria2/: CMakeLists.txt  main.cpp
Teoria3/: CMakeLists.txt  main.cpp  triangles.cpp
Teoria4/: CMakeLists.txt  main.cpp
ejercicio 1/: ocurrencia final.cpp
wxTest/: CMakeLists.txt  main.cpp
